# Sigma2Splunk

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rules.txt
rules/builtin/: group_modification_logging.yml
rules/sysmon/file_event/: file_event_win_win_cscript_wscript_dropper.yml  file_event_win_win_shell_write_susp_directory.yml
rules/sysmon/process_create/: proc_creation_win_susp_wuauclt_cmdline.yml
sigma/: setup.py
sigma/sigma/: requirements.txt
sigma/sigma/wheels/: pymisp-2.4.155.1-py3-none-any.whl  sigmatools-0.20-py3-none-any.whl  wrapt-1.14.0-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
src/: main.rs
