[package]
name = "sigma2splunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
http-auth-basic = "0.3.1"
anyhow = "1.0.56"
rayon = "1.5.1"
walkdir = "2"
yaml-rust = "0.4"
serde-xml-rs = "0.5.1"
